syntax = "proto3";

package protocol;

message InstallSnapshotRequest {
	uint32 term = 1;

	string leader_id = 2;

	uint32 last_included_index = 3;
	uint32 last_included_term = 4;

	uint32 offset = 5;
	bytes data = 6;

	bool done = 7;
}

message InstallSnapshotResponse {
	uint32 term = 1;
}
