syntax = "proto3";

package rpc;

import "request_vote.proto";
import "install_snapshot.proto";
import "append_entries.proto";

service RpcService {

	rpc KeepAlive(KeepAliveRequest) returns (KeepAliveResponse);

	rpc AppendLogEntries(AppendLogEntryRequest) returns (AppendEntryResponse);
	rpc UpdateConfiguration(AppendConfigEntryRequest) returns (AppendEntryResponse);

	rpc ElectLeader(VoteRequest) returns (VoteResponse);

	rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}
